--- a/Assignment-2/Assignment2_Student.ipynb
+++ b/Assignment-2/Assignment2_Student.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "4  12/1/2010 8:26       3.39     17850.0  United Kingdom  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        "max     80995.000000   38970.000000   18287.000000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "4.611113626083471"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        "38970.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "-11062.06"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "Name: Country, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "Name: Total, Length: 541909, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
        "[541909 rows x 9 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
        "Name: Total, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
        "Name: Total, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +889,7 @@
        "Name: Total, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1227,7 @@
        "Unspecified                0.19      69.36   10.649753"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1305,7 @@
        "540421  12/9/2011 9:15       2.08     16446.0  United Kingdom  168469.6  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1332,7 @@
        "728"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1370,7 +1370,7 @@
        "Name: InvoiceDate2, Length: 541909, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1389,39 +1389,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0         2010-12-01\n",
-       "1         2010-12-01\n",
-       "2         2010-12-01\n",
-       "3         2010-12-01\n",
-       "4         2010-12-01\n",
-       "             ...    \n",
-       "541904    2011-12-09\n",
-       "541905    2011-12-09\n",
-       "541906    2011-12-09\n",
-       "541907    2011-12-09\n",
-       "541908    2011-12-09\n",
-       "Name: date, Length: 541909, dtype: object"
+       "0        2010-12-01\n",
+       "1        2010-12-01\n",
+       "2        2010-12-01\n",
+       "3        2010-12-01\n",
+       "4        2010-12-01\n",
+       "            ...    \n",
+       "541904   2011-12-09\n",
+       "541905   2011-12-09\n",
+       "541906   2011-12-09\n",
+       "541907   2011-12-09\n",
+       "541908   2011-12-09\n",
+       "Name: date, Length: 541909, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ecom[\"date\"] = ecom.InvoiceDate2.dt.date\n",
+    "ecom[\"date\"] = pd.to_datetime(ecom.InvoiceDate2.dt.date)\n",
     "ecom.date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "metadata": {
     "scrolled": true
    },
@@ -1550,15 +1550,15 @@
        "3  12/1/2010 8:26       3.39     17850.0  United Kingdom  20.34   \n",
        "4  12/1/2010 8:26       3.39     17850.0  United Kingdom  20.34   \n",
        "\n",
-       "         InvoiceDate2        date  \n",
-       "0 2010-12-01 08:26:00  2010-12-01  \n",
-       "1 2010-12-01 08:26:00  2010-12-01  \n",
-       "2 2010-12-01 08:26:00  2010-12-01  \n",
-       "3 2010-12-01 08:26:00  2010-12-01  \n",
-       "4 2010-12-01 08:26:00  2010-12-01  "
+       "         InvoiceDate2       date  \n",
+       "0 2010-12-01 08:26:00 2010-12-01  \n",
+       "1 2010-12-01 08:26:00 2010-12-01  \n",
+       "2 2010-12-01 08:26:00 2010-12-01  \n",
+       "3 2010-12-01 08:26:00 2010-12-01  \n",
+       "4 2010-12-01 08:26:00 2010-12-01  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1684,15 +1684,15 @@
        "3    536365    84029G  KNITTED UNION FLAG HOT WATER BOTTLE         6   \n",
        "4    536365    84029E       RED WOOLLY HOTTIE WHITE HEART.         6   \n",
        "\n",
-       "   UnitPrice  CustomerID         Country  Total        date  \n",
-       "0       2.55     17850.0  United Kingdom  15.30  2010-12-01  \n",
-       "1       3.39     17850.0  United Kingdom  20.34  2010-12-01  \n",
-       "2       2.75     17850.0  United Kingdom  22.00  2010-12-01  \n",
-       "3       3.39     17850.0  United Kingdom  20.34  2010-12-01  \n",
-       "4       3.39     17850.0  United Kingdom  20.34  2010-12-01  "
+       "   UnitPrice  CustomerID         Country  Total       date  \n",
+       "0       2.55     17850.0  United Kingdom  15.30 2010-12-01  \n",
+       "1       3.39     17850.0  United Kingdom  20.34 2010-12-01  \n",
+       "2       2.75     17850.0  United Kingdom  22.00 2010-12-01  \n",
+       "3       3.39     17850.0  United Kingdom  20.34 2010-12-01  \n",
+       "4       3.39     17850.0  United Kingdom  20.34 2010-12-01  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1711,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
        "Name: StockCode, dtype: object"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1743,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1833,23 +1833,23 @@
        "</div>"
       ],
       "text/plain": [
-       "        Total        date\n",
-       "0       15.30  2010-12-01\n",
-       "1       20.34  2010-12-01\n",
-       "2       22.00  2010-12-01\n",
-       "3       20.34  2010-12-01\n",
-       "4       20.34  2010-12-01\n",
-       "...       ...         ...\n",
-       "541904  10.20  2011-12-09\n",
-       "541905  12.60  2011-12-09\n",
-       "541906  16.60  2011-12-09\n",
-       "541907  16.60  2011-12-09\n",
-       "541908  14.85  2011-12-09\n",
+       "        Total       date\n",
+       "0       15.30 2010-12-01\n",
+       "1       20.34 2010-12-01\n",
+       "2       22.00 2010-12-01\n",
+       "3       20.34 2010-12-01\n",
+       "4       20.34 2010-12-01\n",
+       "...       ...        ...\n",
+       "541904  10.20 2011-12-09\n",
+       "541905  12.60 2011-12-09\n",
+       "541906  16.60 2011-12-09\n",
+       "541907  16.60 2011-12-09\n",
+       "541908  14.85 2011-12-09\n",
        "\n",
        "[541909 rows x 2 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1868,7 +1868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1986,7 +1986,7 @@
        "[541909 rows x 3 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2005,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2131,23 +2131,23 @@
        "</div>"
       ],
       "text/plain": [
-       "        Total        date InvoiceNo  CustomerID  Total\n",
-       "0       15.30  2010-12-01    536365     17850.0  15.30\n",
-       "1       20.34  2010-12-01    536365     17850.0  20.34\n",
-       "2       22.00  2010-12-01    536365     17850.0  22.00\n",
-       "3       20.34  2010-12-01    536365     17850.0  20.34\n",
-       "4       20.34  2010-12-01    536365     17850.0  20.34\n",
-       "...       ...         ...       ...         ...    ...\n",
-       "541904  10.20  2011-12-09    581587     12680.0  10.20\n",
-       "541905  12.60  2011-12-09    581587     12680.0  12.60\n",
-       "541906  16.60  2011-12-09    581587     12680.0  16.60\n",
-       "541907  16.60  2011-12-09    581587     12680.0  16.60\n",
-       "541908  14.85  2011-12-09    581587     12680.0  14.85\n",
+       "        Total       date InvoiceNo  CustomerID  Total\n",
+       "0       15.30 2010-12-01    536365     17850.0  15.30\n",
+       "1       20.34 2010-12-01    536365     17850.0  20.34\n",
+       "2       22.00 2010-12-01    536365     17850.0  22.00\n",
+       "3       20.34 2010-12-01    536365     17850.0  20.34\n",
+       "4       20.34 2010-12-01    536365     17850.0  20.34\n",
+       "...       ...        ...       ...         ...    ...\n",
+       "541904  10.20 2011-12-09    581587     12680.0  10.20\n",
+       "541905  12.60 2011-12-09    581587     12680.0  12.60\n",
+       "541906  16.60 2011-12-09    581587     12680.0  16.60\n",
+       "541907  16.60 2011-12-09    581587     12680.0  16.60\n",
+       "541908  14.85 2011-12-09    581587     12680.0  14.85\n",
        "\n",
        "[541909 rows x 5 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2165,7 +2165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2279,23 +2279,23 @@
        "</div>"
       ],
       "text/plain": [
-       "       Total        date InvoiceNo  CustomerID\n",
-       "0      15.30  2010-12-01    536365     17850.0\n",
-       "1      15.30  2010-12-01    536373     17850.0\n",
-       "2      15.30  2010-12-01    536373     17850.0\n",
-       "3      15.30  2010-12-01    536375     17850.0\n",
-       "4      15.30  2010-12-01    536375     17850.0\n",
-       "...      ...         ...       ...         ...\n",
-       "2187   22.95  2010-12-01    536401     15862.0\n",
-       "2188   16.95  2010-12-01    536401     15862.0\n",
-       "2189   10.65  2010-12-01    536401     15862.0\n",
-       "2190   13.90  2010-12-01    536401     15862.0\n",
-       "2191  153.00  2010-12-01    536402     15513.0\n",
+       "       Total       date InvoiceNo  CustomerID\n",
+       "0      15.30 2010-12-01    536365     17850.0\n",
+       "1      15.30 2010-12-01    536373     17850.0\n",
+       "2      15.30 2010-12-01    536373     17850.0\n",
+       "3      15.30 2010-12-01    536375     17850.0\n",
+       "4      15.30 2010-12-01    536375     17850.0\n",
+       "...      ...        ...       ...         ...\n",
+       "2187   22.95 2010-12-01    536401     15862.0\n",
+       "2188   16.95 2010-12-01    536401     15862.0\n",
+       "2189   10.65 2010-12-01    536401     15862.0\n",
+       "2190   13.90 2010-12-01    536401     15862.0\n",
+       "2191  153.00 2010-12-01    536402     15513.0\n",
        "\n",
        "[2192 rows x 4 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2313,7 +2313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2439,23 +2439,23 @@
        "</div>"
       ],
       "text/plain": [
-       "        Total_left        date InvoiceNo  CustomerID  Total_right\n",
-       "0            15.30  2010-12-01    536365     17850.0        15.30\n",
-       "1            20.34  2010-12-01    536365     17850.0        20.34\n",
-       "2            22.00  2010-12-01    536365     17850.0        22.00\n",
-       "3            20.34  2010-12-01    536365     17850.0        20.34\n",
-       "4            20.34  2010-12-01    536365     17850.0        20.34\n",
-       "...            ...         ...       ...         ...          ...\n",
-       "541904       10.20  2011-12-09    581587     12680.0        10.20\n",
-       "541905       12.60  2011-12-09    581587     12680.0        12.60\n",
-       "541906       16.60  2011-12-09    581587     12680.0        16.60\n",
-       "541907       16.60  2011-12-09    581587     12680.0        16.60\n",
-       "541908       14.85  2011-12-09    581587     12680.0        14.85\n",
+       "        Total_left       date InvoiceNo  CustomerID  Total_right\n",
+       "0            15.30 2010-12-01    536365     17850.0        15.30\n",
+       "1            20.34 2010-12-01    536365     17850.0        20.34\n",
+       "2            22.00 2010-12-01    536365     17850.0        22.00\n",
+       "3            20.34 2010-12-01    536365     17850.0        20.34\n",
+       "4            20.34 2010-12-01    536365     17850.0        20.34\n",
+       "...            ...        ...       ...         ...          ...\n",
+       "541904       10.20 2011-12-09    581587     12680.0        10.20\n",
+       "541905       12.60 2011-12-09    581587     12680.0        12.60\n",
+       "541906       16.60 2011-12-09    581587     12680.0        16.60\n",
+       "541907       16.60 2011-12-09    581587     12680.0        16.60\n",
+       "541908       14.85 2011-12-09    581587     12680.0        14.85\n",
        "\n",
        "[541909 rows x 5 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
